# apps/server/src/controllers/componentLab/index.ts
@@ -1,0 +1,3 @@
+import { ComponentManifestController } from "./componentManifest.controller";
+
+export const COMPONENT_LAB_CONTROLLERS = [ComponentManifestController];
